@@ -1,3 +1,4 @@
+Revision 134 	 2011-09-27 	 Adding nginx tests 
 Revision 133 	 2011-08-17 	 Minor change 
 Revision 132 	 2011-07-13 	 Using cofre for storing passwords in quote_of_the_day.py 
 Revision 131 	 2011-07-09 	 Small fix to quote_of_the_day 
